--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,13 +1,23 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
+default_language_version:
+    python: python3
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v3.2.0
     hooks:
-    -   id: trailing-whitespace
-    -   id: end-of-file-fixer
-    -   id: check-yaml
-    -   id: check-added-large-files
+        - id: trailing-whitespace
+        - id: check-added-large-files
+        - id: check-case-conflict
+        - id: check-docstring-first
+        - id: check-json
+        - id: check-symlinks
+        - id: check-xml
+        - id: check-yaml
+        - id: detect-private-key
+        - id: end-of-file-fixer
+        - id: pretty-format-json
+          args: [ --autofix,--no-sort-keys ]
 -   repo: https://github.com/pycqa/flake8
     rev: 3.9.2
     hooks:
